--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
       <div class="status completed">
          <h1>Completed</h1>
+         <div class="instruction">Drag Items from ToDo list here when completed!</div>
       </div>
    </div>
    <!-- reset button to refresh page -->
